Navbar and sets component part 1

--- a/tcgcollector/src/index.css
+++ b/tcgcollector/src/index.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/*@tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities;*/
 
 body {
   margin: 0;
@@ -14,4 +14,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.avatar {
+  margin-top: 10%;
+  margin-left: 40%;
 }
